--- a/prelim/hash.tex
+++ b/prelim/hash.tex
@@ -2,7 +2,7 @@
 
 We recall the definition of a hash function plus three variants: a stronger variant where  the adversary may adaptively ask for the random coins of parts of the key, and a weaker notion where the adversary needs to find a second preimage, and another notion where the adversary can choose its own key meeting some restrictions.\footnote{See the work of Rogaway and Shrimpton \cite{FSE:RogShr04} for several notions collision resistance and their relations. Adaptivity and Key-Flexibility is not considered though.} We consider functions $h,g:\mathcal{K}\times\mathcal{M}\to\mathcal{Y}$ and an algorithm $\KGen$ which on input a group key randomly samples an element from $\mathcal{K}$.
 
-We say that $h$'s key can be generated in a distributed fashion if $h:\mathcal{K}_\mathsf{global}\times\mathcal{K}^m_{\mathsf{local}}\times\mathcal{M}^m\to \mathcal{Y}$, $\KGen = (\KGen_\mathsf{global},\KGen_\mathsf{local})$, the key is of the form $k = (k_0,k_1,\ldots,k_m)$ and the input is of the form $x=(x_1,\ldots,x_m)$, where $k_0\gets\KGen_{\mathsf{global}}(gk)$ and $k_i\gets\KGen_{\mathsf{local}}(gk,k_0,\mathsf{aux}_i)$, $\mathsf{aux}_1,\ldots,\mathsf{aux}_m$ are independent random variables and $i\in[m]$. 
+We say that $h$'s key can be generated in a distributed fashion if $h:\mathcal{K}_\mathsf{global}\times\mathcal{K}^m_{\mathsf{local}}\times\mathcal{M}^m\to \mathcal{Y}$, $\KGen = (\KGen_\mathsf{global},\KGen_\mathsf{local})$, the key is of the form $k = (k_0,k_1,\ldots,k_m)$ and the input is of the form $x=(x_1,\ldots,x_m)$, where $k_0\gets\KGen_{\mathsf{global}}(gk)$, $k_i\gets\KGen_{\mathsf{local}}(gk,k_0,\mathsf{aux}_i)$, $\mathsf{aux}_1,\ldots,\mathsf{aux}_m$ are auxiliary inputs, and $i\in[m]$. 
 
 In our instantiations with the SXDH assumption we will need to relax the collision condition. We do so by relaxing the equality relation to different ad-hoc equivalence relations. For example, we consider that $x,x'$ are a collision if, besides $x\neq x'$, $x$ and $x'$ are commitments which can't be opened to the same value.
 
