--- a/our-construction/our-hashes-sxdh.tex
+++ b/our-construction/our-hashes-sxdh.tex
@@ -17,7 +17,7 @@
 Note that, if $\vecb{a}_1,\ldots \vecb{a}_m\in\mathcal{Q}_{1}$, then $\matr{A} = (\vec{a}_1\cat\cdots\cat\vecb{a}_m)\in\mathcal{Q}_{m}$ and $[\vecb{a}_i]_1$ is a Groth-Sahai commitment to $\beta_i$.
 Therefore $\sum_{i=0}^m[\vecb{a}_i]_1$ is a Groth-Sahai commitment to the hamming weight of $\vecb{\beta}$, that is $\Com_{[\matr{U}]_1}(\sum_{i=1}^m \beta_i;\sum_{i=0}^m r_i)$.
 
-Sincet $h$ is not efficiently computable, we craft a key $k$ which encodes a matrix $\matr{A}$ and makes possible the construction proofs that $\matr{A}'\in\mathcal{Q}_m$ and $h(\matr{A}')=h(\matr{A})$. Cocretely, the global key is a Groth-Sahai commitment key $[\matr{U}]_1,[\matr{V}]_2$ while each local key is $[\vecb{a}]_1$ and proofs that $\vec{a}\in\mathcal{Q}_1$.
+Since $h$ is not efficiently computable, we craft a key $k$ which encodes a matrix $\matr{A}$ and makes possible the construction proofs that $\matr{A}'\in\mathcal{Q}_m$ and $h(\matr{A}')=h(\matr{A})$. Concretely, the global key is a Groth-Sahai commitment key $[\matr{U}]_1,[\matr{V}]_2$ while each local key is $[\vecb{a}]_1$ and a proof that $\vec{a}\in\mathcal{Q}_1$.
 
 Although is possible to find collisions, it happens only if the matrices open to bitstrings with the same hamming weight or equivalently, the openings are equal up to a permutation. Consequently, to restore collision resistance, we weaken the equality relation to the following equivalence relation
 $$
@@ -27,7 +27,7 @@ where $\mathcal{S}_m\subset \bits^{m\times m}$ is the set of permutation matrice
 
 We prove the following lemma.
 \begin{lemma}
-If $\matr{U}$ is chosen from the perfectly binding distribution, is (unconditionally) impossible to find collisions $\matr{A},\matr{A}'\in\mathcal{Q}_m$ such that $\matr{A}\not\sim_\matr{U}\matr{A}'$ and $h(\matr{A})=h(\matr{A}')$.
+If $\matr{U}$ is chosen from the perfectly binding distribution, then it is (unconditionally) impossible to find collisions $\matr{A},\matr{A}'\in\mathcal{Q}_m$ such that $\matr{A}\not\sim_\matr{U}\matr{A}'$ and $h(\matr{A})=h(\matr{A}')$.
 \end{lemma}
 \begin{proof}
 Given $\matr{A},\matr{A}'\in\mathcal{Q}_m$ we may assume that $\matr{A}=\matr{U}\smallpmatrix{\vecb{\beta}^\top\\\vecb{r}^\top},\matr{A}'=\matr{U}\smallpmatrix{{\vecb{\beta}'}^\top\\\vecb{\delta}^\top}$. Since $\vecb{\beta}$ and $\vecb{\beta}'$ must have the same hamming weigh there exists a permutation matrix $\matr{P}$ such that $\vecb{\beta}^\top\matr{P} = {\vecb{\beta}'}^\top$, and hence
@@ -50,7 +50,7 @@ To prove membership of $\vecb{a}$ in $\mathcal{Q}_1$ we construct Groth-Sahai pr
 \beta(1-\beta)=0 \label{eq:Qm-memb},
 \end{equation}
 for $\beta=\beta_1,\ldots,\beta_m$. For more detail on how this proof is constructed and how to re-randomize them see Appendix \ref{sec:GSproofs-h}.
-Further, given $[\matr{A}]_1$ and a proofs that $\matr{a}_1,\ldots,\matr{a}_m\in\mathcal{Q}_1$, we can construct a proof that $\matr{A}'\in\mathcal{Q}_m$ whenever $\matr{A}'\sim_\matr{U}\matr{A}$. Since $\vecb{a}'_i$ is the re-randomization of $\vecb{a}_j$, for some $j\in[m]$, it suffices to construct the corresponding re-randomized proof.
+Further, given $[\matr{A}]_1$ and proofs that $\matr{a}_1,\ldots,\matr{a}_m\in\mathcal{Q}_1$, we can construct a proof that $\matr{A}'\in\mathcal{Q}_m$ whenever $\matr{A}'\sim_\matr{U}\matr{A}$. Since $\vecb{a}'_i$ is the re-randomization of $\vecb{a}_j$, for some $j\in[m]$, it suffices to construct the corresponding re-randomized proof.
 
 \paragraph{Proving $h(\matr{A})=h(\matr{A}')$.} We can construct proofs that $h(\matr{A}') = h(\matr{A})$ given $\matr{P}\in\mathcal{S}_m$ and $\vecb{\delta}\in\Z_q^m$ such that $\matr{A}' = \matr{A}\matr{P}+\vecb{u}_2\vecb{\delta}^\top$. To do so, it suffices to show that
 \begin{equation}
@@ -58,7 +58,7 @@ Further, given $[\matr{A}]_1$ and a proofs that $\matr{a}_1,\ldots,\matr{a}_m\in
 \label{eq:coll-h}
 \end{equation}
 where $\gamma = \sum_{i=1}^m \delta_i$,
-which can be proved with a Groth-Sahai proof. Further, such proof corresponds to a proof of membership in the span of $\vecb{u}_2$ which can be proved using more efficient QA-NIZK proofs \cite{C:JutRoy14,EC:KilWee15}. In this case the proof consists of only 1 element of $\GG_1$, instead of the $2$ required by Groth-Sahai proofs.
+which can be proved with a Groth-Sahai proof. Further, such proof corresponds to a proof of membership in the span of $\vecb{u}_2$ which can be proved using more efficient QA-NIZK proofs \cite{C:JutRoy14,EC:KilWee15}. In this case the proof consists of only 1 element of $\GG_1$, instead of the $3$ required by Groth-Sahai proofs.
 
 \subsubsection{The function $g$.} Consider perfectly binding Groth-Sahai commitment keys $[\matr{U}]_1=[\vecb{u}_1\cat\vecb{u}_2]_1,[\matr{W}]_2 = [\vecb{w}_1\cat\vecb{w}_2]_2$, together with a trapdoor for the commitment scheme $\vecb{k}\in\Z_q^2$ such that $\vecb{k}^\top\vecb{u}_2=0$ and $\vecb{k}^\top\vecb{u}_1=1$, consider also $[\matr{A}]_1$ such that $\matr{A}\gets\mathcal{Q}_m^\vecb{\beta}$.
 
@@ -73,15 +73,15 @@ The problem is now, how to encode the proof in the hash function? Lets see how t
 \end{align}
 We define $g$ as the left side of the previous equation
 $$
-g_{\matr{A}}([\matr{C}]_2,[\vecb{\psi}]_2,[\vecb{\omega}]_1):= [\matr{A}]_1[\matr{C}^\top]_2-[\vecb{u}_2][\vecb{\psi}^\top]_2-[\vecb{\omega}]_1[\vecb{w}_2^\top]_2,
+g_{\matr{A}}([\matr{C}]_2,[\vecb{\psi}]_2,[\vecb{\omega}]_1):= [\matr{A}]_1[\matr{C}^\top]_2-[\vecb{u}_2][\vecb{\psi}^\top]_2-[\vecb{\omega}]_1[\vecb{w}_2^\top]_2.
 $$
-which is efficiently given $\vecb{w}_1$. Of course, there is an alternative of computing $g$ as $g_{\matr{A}}([\matr{C}]_2,[\vecb{\psi}]_2,[\vecb{\omega}]_1)=[\vecb{d}]_1[\vecb{w}_1^\top]_2$. For simplicity, we may simply write $g_\matr{A}(\matr{C})$ instead of $g_{[\matr{A}]_1}([\matr{C}]_2,[\vecb{\psi}]_2,[\vecb{\omega}]_1)$.
+Of course, there is an alternative of computing $g$ as $g_{\matr{A}}([\matr{C}]_2,[\vecb{\psi}]_2,[\vecb{\omega}]_1)=[\vecb{d}]_1[\vecb{w}_1^\top]_2$. For simplicity, we may simply write $g_\matr{A}(\matr{C})$ instead of $g_{\matr{A}}([\matr{C}]_2,[\vecb{\psi}]_2,[\vecb{\omega}]_1)$.
 
-However, is still tow ways of computing collisions. First, one may pick $[\matr{C}]_2,\allowbreak[\vecb{\psi}']_2,[\vecb{\omega}']_1$ such that $[\vecb{u}_2][{\vecb{\psi}'}^\top]_2+[\vecb{\omega}']_1[\vecb{w}_2^\top]_2=[\vecb{u}_2][\vecb{\psi}^\top]_2+[\vecb{\omega}]_1[\vecb{w}_2^\top]_2$. Second, one may pick $[\matr{C}]_2,[\vecb{\psi}']_2,[\vecb{\omega}']_1$ such that $[\matr{C}']_2 = [\matr{C}]_2 + [\vecb{w}_2]\vecb{\delta}^\top$. It turns out that this are the only type of collisions. Consequently, we consider collisions only with respect to the first argument and we we will weaken the equality relation to the following equivalence relation
+However, there are still two ways of computing collisions. First, one may pick $[\matr{C}]_2,\allowbreak[\vecb{\psi}']_2,[\vecb{\omega}']_1$ such that $[\vecb{u}_2][{\vecb{\psi}'}^\top]_2+[\vecb{\omega}']_1[\vecb{w}_2^\top]_2=[\vecb{u}_2][\vecb{\psi}^\top]_2+[\vecb{\omega}]_1[\vecb{w}_2^\top]_2$. Second, one may pick $[\matr{C}]_2,[\vecb{\psi}']_2,[\vecb{\omega}']_1$ such that $[\matr{C}']_2 = [\matr{C}]_2 + [\vecb{w}_2]\vecb{\delta}^\top$. It turns out that this are the only type of collisions. Consequently, we consider collisions only with respect to the first argument and we we will weaken the equality relation to the following equivalence relation
 $$
 \matr{C}'\simeq_\matr{W} \matr{C} \iff \exists \vecb{\delta}\in\Z_q^m \text{ s.t. } \matr{C}' = \matr{C}+\vecb{u}_2\vecb{\delta}^\top.
 $$
-Further, we also prove collision resistance with respect to relation $\sim_\matr{W}$ 
+Further, we prove a lemma analogous to lemma \ref{lemma:hg} where we consider collision resistance with respect to relation $\sim_\matr{W}$ 
 $$
 \matr{C}'\sim_\matr{W} \matr{C} \iff \exists \matr{P}\in\mathcal{S}_m, \vecb{\delta}\in\Z_q^m \text{ s.t. } \matr{C}' = \matr{C}\matr{P}+\vecb{w}_2\vecb{\delta}^\top,
 $$
@@ -98,7 +98,7 @@ where $\mathcal{S}_m\subset\bits^{m\times m}$ is the set of permutation matrices
  %The global key $k_0$ contains the Groth-Sahai commitment keys and each local key $k_i$ contains Groth-Sahai proofs that $\beta x=y$, for $\beta=\beta_i,x=x_i,y=\beta_ix_i$, and $i\in[m]$. We note that such proofs can be re-randomized as shown in Appendix \ref{sec:GSproofs-g}.
 %We prove $g$'s collision resistance in an scenario where $k$ gives additional information about $[\matr{A}]_1$ to the adversary.
 %Specifically, $k_0$ contains the Groth-Sahai commitment keys $[\matr{U}]_1,\allowbreak[\matr{V}]_2,\allowbreak[\matr{W}]_2$. We use two commitment keys in $\GG_2$ in order to open commitments computed with $[\matr{W}]_2$ even when the distribution of $[\matr{V}]_2$ is changed. Hence, we prove collision resistance even when the adversary knows $\matr{W}$. Each $k_i$ contains a proof showing that $\matr{a}_i\in\mathcal{Q}_1$, as shown in App.~\ref{sec:GSproofs-g}, and a proof that $\beta_ix_i = y_i$, as shown in App.~\ref{sec:GSproofs-g}. We prove collision resistance with respect to adaptive adversaries only when $\vecb{\beta} = \vecb{0}$. In the general case, when $\vecb{\beta}\in\bits^m$ the security degrades exponentially with the hamming weight of $\vecb{\beta}$, although we don't prove it. Anyway, for our ring signatures it will suffice collision resistance with respect to $\vecb{\beta}=\vecb{0}$.
-$\KGen$ on input a group key $gk$ and vectors $\vecb{\beta}\in\bits^m$ and $\vecb{x}\in\Z_q^m$,  outputs $(k_0,k_1,\ldots,k_m)$ where $k_0 \gets \KGen_\mathsf{global}(gk)$ and  $k_i\gets \KGen_{\mathsf{local}}(gk,k_0,\beta_i)$. The global key generator $\KGen_\mathsf{global}$ on input a group key outputs Groth-Sahai commitment keys $[\matr{U}]_1,[\matr{V}]_2,[\matr{W}]_2$. We use two commitment keys in $\GG_2$ in order to open commitments computed with $[\matr{W}]_2$ even when the distribution of $[\matr{V}]_2$ is changed. Hence, we prove collision resistance even when the adversary knows $\matr{W}$. The local key generator on input a group key, a global key, and a bit $\beta\in\bits$, samples $\matr{a}\gets\mathcal{Q}_1$ and outputs $[\vecb{a}]_1$ and a proof $\pi$ that $\vecb{a}\in\mathcal{Q}_1$.
+$\KGen$ on input a group key $gk$ and vectors $\vecb{\beta}\in\bits^m$ and $\vecb{x}\in\Z_q^m$,  outputs $(k_0,k_1,\ldots,k_m)$ where $k_0 \gets \KGen_\mathsf{global}(gk)$ and  $k_i\gets \KGen_{\mathsf{local}}(gk,k_0,\beta_i)$. The global key generator $\KGen_\mathsf{global}$ on input a group key outputs Groth-Sahai commitment keys $[\matr{U}]_1,[\matr{V}]_2,[\matr{W}]_2$. We use two commitment keys in $\GG_2$ in order to open commitments computed with $[\matr{W}]_2$ even when the distribution of $[\matr{V}]_2$ is changed. Hence, we prove collision resistance even when the adversary knows $\matr{W}$. The local key generator on input a group key, a global key, and a bit $\beta\in\bits$, samples $\matr{a}\gets\mathcal{Q}_1^\beta$ and outputs $[\vecb{a}]_1$ and a proof $\pi$ that $\vecb{a}\in\mathcal{Q}_1$.
 %$[\vecb{c}]_2 = x[\vecb{w}_1]_2$, $[\vecb{d}]_1 = \Com_{[\matr{U}]_1}(\beta x)$ and proofs proofs $[\vecb{\psi}]_2,[\vecb{\omega}]_1,[\vecb{\xi}]_2,[\vecb{\phi}]_1$ and $[\vecb{\psi}]_2,[\vecb{\omega}]_1$ computed as in (\ref{eq:Qm-memb-proofs}) and (\ref{eq:wi-proofs}), respectively (see App.~\ref{sec:GSproofs-h} and \ref{sec:GSproofs-g}).
 %The function key is
 %$$
@@ -124,7 +124,7 @@ We define
 &[\vecb{\omega}']_1 := [\vecb{\omega}]_1 +[\matr{A}]_1\matr{P}\vecb{\alpha} + \tau[\vecb{u}_2]_1.
 \label{eq:g-rerand-proofs}
 \end{align}
-We also give a Groth-Sahai proof  that $[\vecb{d}']_1-[\vecb{d}]_1 = \eta[\vecb{u}_2]_1$, which is consists of a commitment $[\xi]_2 = \eta[\vecb{w}_1]_2+\zeta[\vecb{w}_2]_2$ plus 2 elements of $\GG_1$. 
+%We also give a Groth-Sahai proof  that $[\vecb{d}']_1-[\vecb{d}]_1 = \eta[\vecb{u}_2]_1$, which is consists of a commitment $[\xi]_2 = \eta[\vecb{w}_1]_2+\zeta[\vecb{w}_2]_2$ plus 2 elements of $\GG_1$. 
 
 If follows by inspection that $g_{\matr{A}'}([\matr{C}']_2,[\vecb{\psi}']_2,[\vecb{\omega}']_1) = [\vecb{d}']_1[\vecb{w}_2^\top]_2$. Furthermore, $[\vecb{\psi}']_2,[\vecb{\omega}']_1$ are uniformly distributed conditioned on satisfying the verification and, if
 the commitment keys are sampled from the perfectly hiding distribution, $[\matr{A}']_1,[\matr{C}']_2,[\vecb{d}']_1$ are uniformly distributed. Hence, no information about $i$ is leaked.
@@ -142,18 +142,15 @@ For any adversary $\advA$ against adaptive collision resistance of $g$, making a
 We may assume that the adversary is ``eager'', that is, it makes all its queries to the key-generator oracle at the beginning. Note that any non-eager adversary $\advA'$ can be perfectly simulated  by an eager adversary that makes $m$ queries to its oracle and answers $\advA'$ queries ``on demand''. This is justified by the fact that the output of the key-generator oracle is independent of all previous outputs.
 The proof follows from the indistinguishability of the following games.
 \begin{description}
-\item[$\sfGame_0(\advA)$:] This game honestly runs the collision resistance experiment for $g_{\matr{A}}$ and outputs 1 if $\matr{C} \not\sim_\matr{W} \matr{C}'$ and $g_\matr{A}([\matr{C}]_2,[\vecb{\psi}]_2,[\vecb{\omega}]_1)=g_{\matr{A}}([\matr{C}']_2,[\vecb{\psi}']_2,\allowbreak[\vecb{\omega}']_2)$.
+\item[$\sfGame_0(\advA)$:] This game honestly runs the adaptive collision resistance experiment for $g$ and outputs 1 if $\matr{C} \not\sim_\matr{W} \matr{C}'$ and $g_\matr{A}([\matr{C}]_2,[\vecb{\psi}]_2,[\vecb{\omega}]_1)=g_{\matr{A}}([\matr{C}']_2,[\vecb{\psi}']_2,\allowbreak[\vecb{\omega}']_2)$.
 \item[$\sfGame_1(\advA)$:] This game is exactly as $\sfGame_0$ but the openings $[\vecb{x}]_2,[\vecb{x}']_2$ are extracted from $[\matr{C}]_2,[\matr{C}']_2$, respectively. Additionally, the game picks $i\gets[m]$ and aborts if the adversary requests the random coins for generating $k_i$ or outputs $[x_i]_2=[x'_i]_2$.
 \item[$\sfGame_2(\advA)$:] This game is exactly as $\sfGame_1$ but $[\matr{U}]_1$ and $[\matr{V}]_2$ are sampled from the perfectly hiding distribution.
 \item[$\sfGame_3(\advA)$:] This game is exactly as $\sfGame_2$ but queries to $\mathsf{VKGen}$ are answered with $k_j\gets\KGen(gk,k_0,0)$ if $j\neq i$ and $k_j\gets\KGen(gk,k_0,1)$ otherwise.
 \item[$\sfGame_4(\advA)$:] This game is exactly as $\sfGame_3$ but $[\matr{U}]_1$ and $[\matr{V}]_2$ are sampled from the perfectly binding distribution.
 \end{description}
 Denote by $\neg\mathsf{Abort}$ the event where the abort condition of $\sfGame_1$ was no triggered. Then
-\begin{align*}
-\Pr[\sfGame_1(\advA)=1] &= \Pr[\sfGame_0(\advA)=1|\neg\mathsf{Abort}]\Pr[\neg\mathsf{Abort}]\\
-&=\Pr[\neg\mathsf{Abort}|\sfGame_0(\advA)=1]\Pr[\sfGame_0(\advA)=1].
-\end{align*}
-Below we proceed to bound $\Pr[\neg\mathsf{Abort}|\sfGame_0(\advA)=1]$.
+$\Pr[\sfGame_1(\advA)=1] = \Pr[\sfGame_0(\advA)=1|\neg\mathsf{Abort}]\Pr[\neg\mathsf{Abort}]=\Pr[\neg\mathsf{Abort}|\allowbreak \sfGame_0(\advA)=1]\Pr[\sfGame_0(\advA)=1]$.
+Below we proceed to bound $\Pr[\neg\mathsf{Abort}|\allowbreak\sfGame_0(\advA)=1]$.
 
 The probability is: a) the probability that each of the corruption calls doesn't abort and b) the probability that $[x_i]_2\neq[x'_i]_2$. The probability of a) is $\frac{m-i}{m}$ at the $i$-th call, and the probability of b) is at least $\frac{1}{m-t}$. It follows that the desired probability is at least $\frac{m-1}{m}\frac{m-2}{m-1}\cdots\frac{m-t}{m}\frac{1}{m-t}=\frac{1}{m}$ and then $\Pr[\sfGame_0(\advA)=1]\leq m \Pr[\sfGame_1(\advA)=1]$.
 
@@ -181,7 +178,7 @@ We prove that, given a proof that $h(\matr{A}')=h(\matr{A})$, it is hard to find
 
 We further need to assume that $\matr{C}$ opens to some $\vecb{x}$ without repeated entries. In this case, given that $\matr{C}'\not\sim_\matr{W}\matr{C}$, there is some $i$ such that $x_i\neq x'_j$ for any $j$. Indeed, to reach a contradiction assume that for all $i\in[m]$ there is some $j\in[m]$ such that $x_i=x'_j$. Even more, the assumption that $x_i\neq x_j$ for all $i\neq j$ implies that such $j$ must be unique. But then we might define the permutation $\pi$ which assigns $j$ to $i$ and $x_i = x'_{\pi(i)}$ for all $i$, which contradicts the assumption that $\vecb{x}$ is not a permutation of $\vecb{x}'$.
 
-Thereby, we can prove lemma \ref{lemma:g-crp-sxdh} in exactly the same  we proved lemma \ref{lemma:g-cr-sxdh}: we try to guess such $i$ and choose $\vecb{\beta}$ such that is $1$ only at position $i$. Then, whatever the permutation $\matr{P}$ is, $\vecb{\beta}^\top\matr{P}\vecb{x}' = x'_j \neq x_i = \vecb{\beta}^\top\vecb{x}$, for some $j\in[m]$.
+Thereby, we can prove lemma \ref{lemma:g-crp-sxdh} in exactly the same way we proved lemma \ref{lemma:g-cr-sxdh}: we try to guess such $i$ and choose $\vecb{\beta}$ such that is $1$ only at position $i$. Then, whatever the permutation $\matr{P}$ is, $\vecb{\beta}^\top\matr{P}\vecb{x}' = x'_j \neq x_i = \vecb{\beta}^\top\vecb{x}$, for some $j\in[m]$.
 
  \begin{lemma} \label{lemma:g-crp-sxdh} Consider the following modified security game for adaptive collision-resistance. The adversary wins if it returns $[\matr{A}']_1,[\matr{C}']_2,[\vecb{\psi}']_1,[\vecb{\omega}']_2,[\matr{C}]_2,[\vecb{\psi}]_2,[\vecb{\omega}]_1$ and a Groth-Sahai proof that  $h(\matr{A})=h(\matr{A}')$ such that $g_\matr{A}([\matr{C}]_2,[\vecb{\psi}]_2,[\vecb{\omega}]_1) = g_{\matr{A}'}([\matr{C}']_2,\allowbreak[\vecb{\psi}']_2,[\vecb{\omega}']_2)$, but  $\matr{C}\not\sim_\matr{W}\matr{C}'$ and the opening $[\vecb{x}]_2$ of $[\matr{C}]_2$ has no repeated entries.
 
@@ -192,20 +189,19 @@ As in lemma \ref{lemma:g-cr-sxdh} we may assume, without loss of generality, tha
 
 The proof follows from the indistinguishability of the following games.
 \begin{description}
-\item[$\sfGame_0(\advA)$:] This game honestly runs the modified second-preimage resistance experiment for $g_{\matr{A}}$ and outputs 1 if $[\matr{C}]_2 \not\sim_\matr{W}[\matr{C}']_2$ and $g_\matr{A}([\matr{C}]_2,[\vecb{\psi}]_2,\allowbreak [\vecb{\omega}]_1)=g_{\matr{A}'}([\matr{C}']_2,[\vecb{\psi}']_2,[\vecb{\omega}']_2)$ and the proof that $h(\matr{A})=h(\matr{A}')$ is valid.
+\item[$\sfGame_0(\advA)$:] This game honestly runs the modified adaptive collision-resistance experiment for $g$ and outputs 1 if $[\matr{C}]_2 \not\sim_\matr{W}[\matr{C}']_2$ and $g_\matr{A}([\matr{C}]_2,[\vecb{\psi}]_2,\allowbreak [\vecb{\omega}]_1)=g_{\matr{A}'}([\matr{C}']_2,[\vecb{\psi}']_2,[\vecb{\omega}']_2)$ and the proof that $h(\matr{A})=h(\matr{A}')$ is valid.
 \item[$\sfGame_1(\advA)$:] This game is exactly as $\sfGame_0$ but it picks $i\gets[m]$ and aborts if the adversary requests the random coins for generating $k_i$ or $[x_i]_2=[x'_j]_2$ for some $j\in[m]$.
 \item[$\sfGame_2(\advA)$:] This game is exactly as $\sfGame_1$ but $[\matr{U}]_1$ and $[\matr{V}]_2$ are sampled from the perfectly hiding distribution.
 \item[$\sfGame_3(\advA)$:] This game is exactly as $\sfGame_2$ but queries to $\mathsf{VKGen}$ are answered with $k_j\gets\KGen(gk,k_0,0)$ if $j\neq i$ and $k_j\gets\KGen(gk,k_0,1)$ otherwise.
 \item[$\sfGame_4(\advA)$:] This game is exactly as $\sfGame_3$ but $[\matr{U}]_1$ and $[\matr{V}]_2$ are sampled from the perfectly binding distribution.
 \end{description}
 Denote by $\neg\mathsf{Abort}$ the event where the abort condition of $\sfGame_1$ was no triggered. Then
-\begin{align*}
-\Pr[\sfGame_1(\advA)=1] &= \Pr[\sfGame_0(\advA)=1|\neg\mathsf{Abort}]\Pr[\neg\mathsf{Abort}]\\
-&=\Pr[\neg\mathsf{Abort}|\sfGame_0(\advA)=1]\Pr[\sfGame_0(\advA)=1].
-\end{align*}
+$
+\Pr[\sfGame_1(\advA)=1] = \Pr[\sfGame_0(\advA)=1|\neg\mathsf{Abort}]\Pr[\neg\mathsf{Abort}]
+=\Pr[\neg\mathsf{Abort}|\allowbreak\sfGame_0(\advA)=1]\Pr[\sfGame_0(\advA)=1]$.
 Below we proceed to bound $\Pr[\neg\mathsf{Abort}|\sfGame_0(\advA)=1]$.
 
-The probability is: a) the probability that each of the corruption calls doesn't abort and b) the probability that $[x_i]_2\neq[x'_j]_2$ for all $j\in[m]$. The probability of a) is $\frac{m-i}{m}$ at the $i$-th call, and the probability of b) is at least $\frac{1}{m-t}$. It follows that the desired probability is at least $\frac{m-1}{m}\frac{m-2}{m-1}\cdots\frac{m-t}{m}\frac{1}{m-t}=\frac{1}{m}$ and then $\Pr[\sfGame_0(\advA)=1]\leq m\frac{q}{q-m^2} \Pr[\sfGame_1(\advA)=1]$.
+The probability is: a) the probability that each of the corruption calls doesn't abort and b) the probability that $[x_i]_2\neq[x'_j]_2$ for all $j\in[m]$. The probability of a) is $\frac{m-i}{m}$ at the $i$-th call, and the probability of b) is at least $\frac{1}{m-t}$. It follows that the desired probability is at least $\frac{m-1}{m}\frac{m-2}{m-1}\cdots\frac{m-t}{m}\frac{1}{m-t}=\frac{1}{m}$ and then $\Pr[\sfGame_0(\advA)=1]\leq m \Pr[\sfGame_1(\advA)=1]$.
 
 It holds that $\Pr[\sfGame_1(\advA)=1]-\Pr[\sfGame_2(\advA)=1]\leq\adv_\mathrm{SXDH}(\advB)$, for some adversary $\advB$, since the only change in the games is the Groth-Sahai commitment key wich is changed from perfectly binding to perfectly hiding. %However, here the argument is slightly more subtle. An adversary attempting to tell apart perfectly binding from perfectly hiding Groth-Sahai commitments keys (or equivalently, an adversary against SXDH) can't efficiently simulate $\sfGame_1(\advA)$ and $\sfGame_2(\advA)$ as they require the computation of $g$ while the discrete logarithm of the commitment keys is unknown. Let $\matr{C}_1,\matr{C}'_1$ and $\matr{C}_2,\matr{C}'_2$ the purported collisions output by $\advA$ in, respectively, $\sfGame_1$ and $\sfGame_2$. We note that $\Pr[\sfGame_1(\advA)=1] \leq \Pr[x_{1,i}\neq x'_{1,i}]$ and $\Pr[\sfGame_2(\advA)=1] = \Pr[x_{2,i}\neq x'_{2,i}]$, since in $\sfGame_2$ it holds that $g_{\matr{A}}(\matr{C}) = \vecb{k}^\top\matr{A}\matr{C} = 0 = g_\matr{A}(\matr{C}')$ for any $\matr{C},\matr{C}'$. Therefore, $\Pr[\sfGame_1(\advA)=1]-\Pr[\sfGame_2(\advA)=1]\leq \Pr[x_{1,i}\neq x'_{1,i}]-\Pr[x_{2,i}\neq x'_{2,i}]$. Instead of simulating the games, the adversary $\advB$, which receives as challenge Groth-Sahai commitment keys, runs $\sfGame_1$ replacing the commitment keys by it challenges and outputs $1$ if $x_i\neq x'_i$ and $0$ otherwise regardless of whether $g_\matr{A}(\matr{C})=g_{\matr{A}}(\matr{C}')$ or not.
 
